--- a/.browserslistrc
+++ b/.browserslistrc
@@ -17,11 +17,11 @@
 # Generated data.
 # <generated:start>
 
-# Last generated Mon, Sep 25, 2023, 9:59:44 AM EDT.
+# Last generated Mon, Sep 25, 2023, 12:17:21 PM EDT.
 
 [production]
 last 1 chrome versions
-node >= 20.5.1
+node >= 20.5.0
 and_chr >= 92
 chrome >= 92
 and_ff >= 90
@@ -46,7 +46,7 @@ not dead
 
 [any]
 last 1 chrome versions
-node >= 20.5.1
+node >= 20.5.0
 and_chr >= 92
 chrome >= 92
 and_ff >= 90
@@ -70,7 +70,7 @@ unreleased firefox versions
 not dead
 
 [node]
-node >= 20.5.1
+node >= 20.5.0
 not dead
 
 [cfw]
