--- a/.vscodeignore
+++ b/.vscodeignore
@@ -17,7 +17,7 @@
 # Generated data.
 # <generated:start>
 
-# Last generated Mon, Sep 25, 2023, 9:59:44 AM EDT.
+# Last generated Mon, Sep 25, 2023, 12:17:21 PM EDT.
 
 # Locals
 
