--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
  * @note This entire file will be updated automatically.
  * @note Instead of editing here, please review `./tsconfig.mjs`.
  *
- * Last generated using `./tsconfig.mjs` Mon, Sep 25, 2023, 9:59:45 AM EDT.
+ * Last generated using `./tsconfig.mjs` Mon, Sep 25, 2023, 12:17:22 PM EDT.
  */
 {
     "include": ["./*.d.ts", "./src/**/*"],
