--- a/wrangler.toml
+++ b/wrangler.toml
@@ -7,7 +7,7 @@
 # @note This entire file will be updated automatically.
 # @note Instead of editing here, please review `./wrangler.mjs`.
 #
-# Last generated using `./wrangler.mjs` Mon, Sep 25, 2023, 9:59:46 AM EDT.
+# Last generated using `./wrangler.mjs` Mon, Sep 25, 2023, 12:17:22 PM EDT.
 ##
 
 compatibility_date = "2023-08-15"
