--- a/.npmignore
+++ b/.npmignore
@@ -25,7 +25,7 @@
 # Generated data.
 # <generated:start>
 
-# Last generated Mon, Sep 25, 2023, 1:29:12 PM EDT.
+# Last generated Tue, Sep 26, 2023, 5:46:44 AM EDT.
 
 # Locals
 
