--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
  * @note This entire file will be updated automatically.
  * @note Instead of editing here, please review `./tsconfig.mjs`.
  *
- * Last generated using `./tsconfig.mjs` Mon, Sep 25, 2023, 1:29:12 PM EDT.
+ * Last generated using `./tsconfig.mjs` Tue, Sep 26, 2023, 5:46:45 AM EDT.
  */
 {
     "include": ["./*.d.ts", "./src/**/*"],
