--- a/wrangler.toml
+++ b/wrangler.toml
@@ -7,7 +7,7 @@
 # @note This entire file will be updated automatically.
 # @note Instead of editing here, please review `./wrangler.mjs`.
 #
-# Last generated using `./wrangler.mjs` Mon, Sep 25, 2023, 1:29:13 PM EDT.
+# Last generated using `./wrangler.mjs` Tue, Sep 26, 2023, 5:46:46 AM EDT.
 ##
 
 compatibility_date = "2023-08-15"
