Project update. [p][robotic]

--- a/.browserslistrc
+++ b/.browserslistrc
@@ -17,7 +17,7 @@
 # Generated data.
 # <generated:start>
 
-# Last generated Tue, Sep 26, 2023, 5:46:44 AM EDT.
+# Last generated Wed, Sep 27, 2023, 2:45:02 PM EDT.
 
 [production]
 last 1 chrome versions
