--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,10 +7,10 @@
  * @note This entire file will be updated automatically.
  * @note Instead of editing here, please review `./tsconfig.mjs`.
  *
- * Last generated using `./tsconfig.mjs` Tue, Sep 26, 2023, 5:46:45 AM EDT.
+ * Last generated using `./tsconfig.mjs` Wed, Sep 27, 2023, 2:45:03 PM EDT.
  */
 {
-    "include": ["./*.d.ts", "./src/**/*"],
+    "include": ["./src/**/*", "./dev-types.d.ts"],
     "exclude": [
         "**/._*/**",
         "**/.~*/**",
@@ -64,11 +64,11 @@
         "**/Temporary Items/**",
         "**/.*/**",
         "**/*.tsbuildinfo/**",
-        "**/tsconfig.*/**",
-        "**/wrangler.*/**",
         "**/*.config.*/**",
-        "**/config.gypi/**",
+        "**/wrangler.*/**",
+        "**/tsconfig.*/**",
         "**/package.json/**",
+        "**/config.gypi/**",
         "**/yarn.lock/**",
         "**/composer.lock/**",
         "**/package-lock.json/**",
