--- a/.prettierignore
+++ b/.prettierignore
@@ -17,7 +17,7 @@
 # Generated data.
 # <generated:start>
 
-# Last generated Tue, Sep 26, 2023, 5:46:44 AM EDT.
+# Last generated Wed, Sep 27, 2023, 2:45:02 PM EDT.
 
 # Packages
 
@@ -120,7 +120,7 @@ dist
 *.npmrc
 
 # EJS unsupported at this time.
-# @todo Build or find an EJS plugin.
+# @someday Build or find an EJS plugin.
 
 *.ejs
 
