--- a/.vscodeignore
+++ b/.vscodeignore
@@ -17,7 +17,7 @@
 # Generated data.
 # <generated:start>
 
-# Last generated Tue, Sep 26, 2023, 5:46:44 AM EDT.
+# Last generated Wed, Sep 27, 2023, 2:45:02 PM EDT.
 
 # Locals
 
@@ -214,9 +214,11 @@ dist
 
 # npm:Configs
 
-tsconfig.*
-wrangler.*
 *.config.*
+wrangler.*
+tsconfig.*
+dev-types.d.ts
+package.json
 config.gypi
 
 # npm:Locks
