--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
  * @note This entire file will be updated automatically.
  * @note Instead of editing here, please review `./tsconfig.mjs`.
  *
- * Last generated using `./tsconfig.mjs` Thu, Sep 28, 2023, 3:32:41 PM EDT.
+ * Last generated using `./tsconfig.mjs` Fri, Sep 29, 2023, 7:05:09 PM EDT.
  */
 {
     "include": ["./src/**/*", "./dev-types.d.ts"],
@@ -27,6 +27,21 @@
         "**/.idea/**",
         "**/.*.swp/**",
         "**/*.ctags/**",
+        "**/.env.me/**",
+        "**/.tscache/**",
+        "**/*.tsbuildinfo/**",
+        "**/.vite/**",
+        "**/.vitest/**",
+        "**/.wrangler/**",
+        "**/.dev.vars/**",
+        "**/.dev.vars.*/**",
+        "**/.rollup/**",
+        "**/.webpack/**",
+        "**/.linaria-cache/**",
+        "**/.sass-cache/**",
+        "**/.docker/**",
+        "**/.vagrant/**",
+        "**/.elasticbeanstalk/**",
         "**/.yarn/**",
         "**/vendor/**",
         "**/node_modules/**",
@@ -63,7 +78,6 @@
         "**/Network Trash Folder/**",
         "**/Temporary Items/**",
         "**/.*/**",
-        "**/*.tsbuildinfo/**",
         "**/*.config.*/**",
         "**/wrangler.*/**",
         "**/tsconfig.*/**",
@@ -92,7 +106,7 @@
         "skipLibCheck": true,
         "target": "es2022",
         "lib": ["es2022", "dom", "webworker"],
-        "types": ["vite/client", "@types/mdx", "@types/node", "@types/luxon", "@types/semver", "@types/micromatch", "@types/libsodium-wrappers"],
+        "types": ["vite/client", "@types/mdx", "unplugin-icons/types/preact", "@types/node", "@types/luxon", "@types/semver", "@types/micromatch", "@types/libsodium-wrappers"],
         "jsx": "react-jsx",
         "jsxImportSource": "preact",
         "module": "node16",
