--- a/.dockerignore
+++ b/.dockerignore
@@ -17,7 +17,7 @@
 # Generated data.
 # <generated:start>
 
-# Last generated Fri, Sep 29, 2023, 7:05:08 PM EDT.
+# Last generated Sat, Sep 30, 2023, 7:51:44 AM EDT.
 
 # Locals
 
