--- a/.browserslistrc
+++ b/.browserslistrc
@@ -17,7 +17,7 @@
 # Generated data.
 # <generated:start>
 
-# Last generated Sat, Sep 30, 2023, 9:36:11 AM EDT.
+# Last generated Sat, Sep 30, 2023, 12:57:43 PM EDT.
 
 [production]
 last 1 chrome versions
