--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
  * @note This entire file will be updated automatically.
  * @note Instead of editing here, please review `./tsconfig.mjs`.
  *
- * Last generated using `./tsconfig.mjs` Sat, Sep 30, 2023, 9:36:11 AM EDT.
+ * Last generated using `./tsconfig.mjs` Sat, Sep 30, 2023, 12:57:43 PM EDT.
  */
 {
     "include": ["./src/**/*", "./dev-types.d.ts"],
