--- a/.browserslistrc
+++ b/.browserslistrc
@@ -17,7 +17,7 @@
 # Generated data.
 # <generated:start>
 
-# Last generated Sat, Sep 30, 2023, 2:54:45 PM EDT.
+# Last generated Sun, Oct 1, 2023, 5:59:45 AM EDT.
 
 [production]
 last 1 chrome versions
