--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,7 +7,7 @@
  * @note This entire file will be updated automatically.
  * @note Instead of editing here, please review `./settings.mjs`.
  *
- * Last generated using `./settings.mjs` Sat, Sep 30, 2023, 2:54:45 PM EDT.
+ * Last generated using `./settings.mjs` Sun, Oct 1, 2023, 5:59:45 AM EDT.
  */
 {
     "editor.formatOnType": false,
