--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
  * @note This entire file will be updated automatically.
  * @note Instead of editing here, please review `./tsconfig.mjs`.
  *
- * Last generated using `./tsconfig.mjs` Sat, Sep 30, 2023, 2:54:46 PM EDT.
+ * Last generated using `./tsconfig.mjs` Sun, Oct 1, 2023, 5:59:45 AM EDT.
  */
 {
     "include": ["./src/**/*", "./dev-types.d.ts"],
