--- a/wrangler.toml
+++ b/wrangler.toml
@@ -7,7 +7,7 @@
 # @note This entire file will be updated automatically.
 # @note Instead of editing here, please review `./wrangler.mjs`.
 #
-# Last generated using `./wrangler.mjs` Sat, Sep 30, 2023, 2:54:46 PM EDT.
+# Last generated using `./wrangler.mjs` Sun, Oct 1, 2023, 5:59:46 AM EDT.
 ##
 
 send_metrics = false
