--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "publishConfig": {
         "access": "public"
     },
-    "version": "1.0.299",
+    "version": "1.0.300",
     "license": "GPL-3.0-or-later",
     "name": "@clevercanyon/utilities",
     "description": "Utilities for JavaScript apps running in any environment.",
@@ -106,6 +106,11 @@
             "import": "./dist/preact/components.js",
             "default": "./dist/preact/components.js"
         },
+        "./preact/components/aside": {
+            "types": "./dist/types/preact/components/aside.d.ts",
+            "import": "./dist/preact/components/aside.js",
+            "default": "./dist/preact/components/aside.js"
+        },
         "./preact/components/body": {
             "types": "./dist/types/preact/components/body.d.ts",
             "import": "./dist/preact/components/body.js",
@@ -131,10 +136,30 @@
             "import": "./dist/preact/components/html.js",
             "default": "./dist/preact/components/html.js"
         },
+        "./preact/components/link": {
+            "types": "./dist/types/preact/components/link.d.ts",
+            "import": "./dist/preact/components/link.js",
+            "default": "./dist/preact/components/link.js"
+        },
+        "./preact/components/main": {
+            "types": "./dist/types/preact/components/main.d.ts",
+            "import": "./dist/preact/components/main.js",
+            "default": "./dist/preact/components/main.js"
+        },
+        "./preact/components/midsection": {
+            "types": "./dist/types/preact/components/midsection.d.ts",
+            "import": "./dist/preact/components/midsection.js",
+            "default": "./dist/preact/components/midsection.js"
+        },
         "./preact/components/router": {
             "types": "./dist/types/preact/components/router.d.ts",
             "import": "./dist/preact/components/router.js",
             "default": "./dist/preact/components/router.js"
+        },
+        "./preact/components/wrapper": {
+            "types": "./dist/types/preact/components/wrapper.d.ts",
+            "import": "./dist/preact/components/wrapper.js",
+            "default": "./dist/preact/components/wrapper.js"
         },
         "./str": {
             "types": "./dist/types/str.d.ts",
