--- a/.gitignore
+++ b/.gitignore
@@ -17,7 +17,7 @@
 # Generated data.
 # <generated:start>
 
-# Last generated Tue, Oct 3, 2023, 6:45:41 AM EDT.
+# Last generated Wed, Oct 4, 2023, 3:32:09 PM EDT.
 
 # Locals
 
