--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,7 +7,7 @@
  * @note This entire file will be updated automatically.
  * @note Instead of editing here, please review `./settings.mjs`.
  *
- * Last generated using `./settings.mjs` Tue, Oct 3, 2023, 6:45:41 AM EDT.
+ * Last generated using `./settings.mjs` Wed, Oct 4, 2023, 3:32:09 PM EDT.
  */
 {
     "editor.formatOnType": false,
@@ -216,6 +216,7 @@
     "stylelint.validate": ["scss", "css"],
     "tailwindCSS.validate": true,
     "tailwindCSS.experimental.configFile": "./tailwind.config.mjs",
+    "tailwindCSS.classAttributes": ["class", "classes", "className", "classNames"],
     "tailwindCSS.includeLanguages": {},
     "tailwindCSS.files.exclude": [
         "/dev/.files/**",
