Project update. [p][robotic]

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,7 +7,7 @@
  * @note This entire file will be updated automatically.
  * @note Instead of editing here, please review `./settings.mjs`.
  *
- * Last generated using `./settings.mjs` Thu, Oct 5, 2023, 1:28:58 PM EDT.
+ * Last generated using `./settings.mjs` Mon, Oct 9, 2023, 8:28:26 AM EDT.
  */
 {
     "editor.formatOnType": false,
