--- a/.vscodeignore
+++ b/.vscodeignore
@@ -17,7 +17,7 @@
 # Generated data.
 # <generated:start>
 
-# Last generated Thu, Oct 5, 2023, 1:28:58 PM EDT.
+# Last generated Mon, Oct 9, 2023, 8:28:27 AM EDT.
 
 # Locals
 
