--- a/wrangler.toml
+++ b/wrangler.toml
@@ -7,7 +7,7 @@
 # @note This entire file will be updated automatically.
 # @note Instead of editing here, please review `./wrangler.mjs`.
 #
-# Last generated using `./wrangler.mjs` Thu, Oct 5, 2023, 1:29:00 PM EDT.
+# Last generated using `./wrangler.mjs` Mon, Oct 9, 2023, 8:28:28 AM EDT.
 ##
 
 send_metrics = false
