--- a/.npmignore
+++ b/.npmignore
@@ -25,7 +25,7 @@
 # Generated data.
 # <generated:start>
 
-# Last generated Mon, Oct 9, 2023, 8:58:51 AM EDT.
+# Last generated Mon, Oct 9, 2023, 5:44:13 PM EDT.
 
 # Locals
 
