--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
  * @note This entire file will be updated automatically.
  * @note Instead of editing here, please review `./tsconfig.mjs`.
  *
- * Last generated using `./tsconfig.mjs` Mon, Oct 9, 2023, 8:58:51 AM EDT.
+ * Last generated using `./tsconfig.mjs` Mon, Oct 9, 2023, 5:44:14 PM EDT.
  */
 {
     "include": ["./src/**/*", "./dev-types.d.ts"],
