--- a/wrangler.toml
+++ b/wrangler.toml
@@ -7,7 +7,7 @@
 # @note This entire file will be updated automatically.
 # @note Instead of editing here, please review `./wrangler.mjs`.
 #
-# Last generated using `./wrangler.mjs` Mon, Oct 9, 2023, 8:58:52 AM EDT.
+# Last generated using `./wrangler.mjs` Mon, Oct 9, 2023, 5:44:14 PM EDT.
 ##
 
 send_metrics = false
