--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "publishConfig": {
         "access": "public"
     },
-    "version": "1.0.332",
+    "version": "1.0.333",
     "license": "GPL-3.0-or-later",
     "name": "@clevercanyon/utilities",
     "description": "Utilities for JavaScript apps running in any environment.",
@@ -141,6 +141,11 @@
             "import": "./dist/preact/components/layout-context.js",
             "default": "./dist/preact/components/layout-context.js"
         },
+        "./preact/components/prose": {
+            "types": "./dist/types/preact/components/prose.d.ts",
+            "import": "./dist/preact/components/prose.js",
+            "default": "./dist/preact/components/prose.js"
+        },
         "./preact/components/router": {
             "types": "./dist/types/preact/components/router.d.ts",
             "import": "./dist/preact/components/router.js",
@@ -195,12 +200,12 @@
     },
     "dependencies": {},
     "peerDependencies": {
-        "@clevercanyon/preact-iso.fork": "^2.3.82",
+        "@clevercanyon/preact-iso.fork": "^2.3.83",
         "ignore": "^5.2.4",
         "ip-regex": "^5.0.0",
         "luxon": "^3.4.3",
         "micro-memoize": "^4.1.2",
-        "micromatch": "npm:@clevercanyon/micromatch.fork@^4.0.71",
+        "micromatch": "npm:@clevercanyon/micromatch.fork@^4.0.72",
         "preact": "^10.18.1",
         "preact-render-to-string": "^6.2.2",
         "react": "npm:@preact/compat@^17.1.2",
@@ -211,7 +216,7 @@
     "optionalDependencies": {},
     "bundleDependencies": [],
     "devDependencies": {
-        "@clevercanyon/dev-deps": "^1.0.249"
+        "@clevercanyon/dev-deps": "^1.0.250"
     },
     "overrides": {},
     "cpu": ["x64", "arm64"],
