Project update. [p][robotic]

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -135,10 +135,10 @@
         "tsconfig.*": true,
         "dev-types.d.ts": true,
         "config.gypi": true,
-        "dev/.files": true,
+        "dev/.files": false,
         ".yarn": true,
         "vendor": true,
-        "node_modules": false,
+        "node_modules": true,
         "jspm_packages": true,
         "bower_components": true,
         "yarn.lock": true,
