--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "publishConfig": {
         "access": "public"
     },
-    "version": "1.0.340",
+    "version": "1.0.341",
     "license": "GPL-3.0-or-later",
     "name": "@clevercanyon/utilities",
     "description": "Utilities for JavaScript apps running in any environment.",
@@ -206,11 +206,13 @@
     "dependencies": {},
     "peerDependencies": {
         "@clevercanyon/preact-iso.fork": "^2.3.83",
+        "color2k": "^2.0.2",
         "ignore": "^5.2.4",
         "ip-regex": "^5.0.0",
         "luxon": "^3.4.3",
         "micro-memoize": "^4.1.2",
         "micromatch": "npm:@clevercanyon/micromatch.fork@^4.0.72",
+        "parse-css-color": "^0.2.1",
         "preact": "^10.18.1",
         "preact-render-to-string": "^6.2.2",
         "react": "npm:@preact/compat@^17.1.2",
@@ -222,7 +224,7 @@
     "optionalDependencies": {},
     "bundleDependencies": [],
     "devDependencies": {
-        "@clevercanyon/dev-deps": "^1.0.250"
+        "@clevercanyon/dev-deps": "^1.0.252"
     },
     "overrides": {},
     "cpu": ["x64", "arm64"],
