--- a/.browserslistrc
+++ b/.browserslistrc
@@ -17,7 +17,7 @@
 # Generated data.
 # <generated:start>
 
-# Last generated Mon, Oct 9, 2023, 9:55:32 PM EDT.
+# Last generated Thu, Oct 19, 2023, 1:56:24 AM EDT.
 
 [production]
 last 1 chrome versions
