--- a/.gitignore
+++ b/.gitignore
@@ -17,7 +17,7 @@
 # Generated data.
 # <generated:start>
 
-# Last generated Mon, Oct 9, 2023, 9:55:31 PM EDT.
+# Last generated Thu, Oct 19, 2023, 1:56:23 AM EDT.
 
 # Locals
 
