--- a/.browserslistrc
+++ b/.browserslistrc
@@ -17,7 +17,7 @@
 # Generated data.
 # <generated:start>
 
-# Last generated Thu, Oct 19, 2023, 10:35:45 AM EDT.
+# Last generated Thu, Oct 19, 2023, 5:12:40 PM EDT.
 
 [production]
 last 1 chrome versions
