--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,7 +7,7 @@
  * @note This entire file will be updated automatically.
  * @note Instead of editing here, please review `./settings.mjs`.
  *
- * Last generated using `./settings.mjs` Thu, Oct 19, 2023, 10:35:45 AM EDT.
+ * Last generated using `./settings.mjs` Thu, Oct 19, 2023, 5:12:39 PM EDT.
  */
 {
     "editor.formatOnType": false,
