--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
  * @note This entire file will be updated automatically.
  * @note Instead of editing here, please review `./tsconfig.mjs`.
  *
- * Last generated using `./tsconfig.mjs` Thu, Oct 19, 2023, 10:35:46 AM EDT.
+ * Last generated using `./tsconfig.mjs` Thu, Oct 19, 2023, 5:12:40 PM EDT.
  */
 {
     "include": ["./src/**/*", "./dev-types.d.ts"],
