Project update. [p][robotic]

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "publishConfig": {
         "access": "public"
     },
-    "version": "1.0.380",
+    "version": "1.0.381",
     "license": "GPL-3.0-or-later",
     "name": "@clevercanyon/utilities",
     "description": "Utilities for JavaScript apps running in any environment.",
@@ -207,7 +207,7 @@
             "default": "./dist/version.js"
         }
     },
-    "sideEffects": ["**/*.{css,scss,less}", "./src/resources/init.ts", "./src/resources/preact/apis/iso/lazy.tsx"],
+    "sideEffects": ["**/*.{css,scss,less}", "./src/preact/components/router.tsx", "./src/resources/init.ts"],
     "module": "./dist/index.js",
     "main": "./dist/index.js",
     "browser": "",
@@ -258,7 +258,7 @@
                     "appType": "lib",
                     "targetEnv": "any",
                     "entryFiles": ["./src/*.{ts,tsx}", "./src/preact/{*,*/*}.{ts,tsx}"],
-                    "sideEffects": ["./src/resources/preact/apis/iso/lazy.tsx"]
+                    "sideEffects": ["./src/preact/components/router.tsx"]
                 },
                 "ssrBuild": {
                     "appType": "",
