Project update. [p][robotic]

--- a/.browserslistrc
+++ b/.browserslistrc
@@ -17,7 +17,7 @@
 # Generated data.
 # <generated:start>
 
-# Last generated Mon, Oct 30, 2023, 11:45:10 PM EDT.
+# Last generated Fri, Nov 3, 2023, 12:34:34 AM EDT.
 
 [production]
 last 1 chrome versions
