--- a/.gitattributes
+++ b/.gitattributes
@@ -17,7 +17,7 @@
 # Generated data.
 # <generated:start>
 
-# Last generated Mon, Oct 30, 2023, 11:45:09 PM EDT.
+# Last generated Fri, Nov 3, 2023, 12:34:34 AM EDT.
 
 # Default
 
