--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,7 +7,7 @@
  * @note This entire file will be updated automatically.
  * @note Instead of editing here, please review `./settings.mjs`.
  *
- * Last generated using `./settings.mjs` Mon, Oct 30, 2023, 11:45:09 PM EDT.
+ * Last generated using `./settings.mjs` Fri, Nov 3, 2023, 12:34:34 AM EDT.
  */
 {
     "editor.formatOnType": false,
