--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
  * @note This entire file will be updated automatically.
  * @note Instead of editing here, please review `./tsconfig.mjs`.
  *
- * Last generated using `./tsconfig.mjs` Mon, Oct 30, 2023, 11:45:11 PM EDT.
+ * Last generated using `./tsconfig.mjs` Fri, Nov 3, 2023, 12:34:35 AM EDT.
  */
 {
     "include": ["./src/**/*", "./dev-types.d.ts"],
