Saving work on analytics/consent.

--- a/.prettierignore
+++ b/.prettierignore
@@ -17,7 +17,7 @@
 # Generated data.
 # <generated:start>
 
-# Last generated Fri, Nov 3, 2023, 12:34:34 AM EDT.
+# Last generated Tue, Nov 7, 2023, 8:33:02 PM EST.
 
 # Packages
 
