--- a/wrangler.toml
+++ b/wrangler.toml
@@ -7,7 +7,7 @@
 # @note This entire file will be updated automatically.
 # @note Instead of editing here, please review `./wrangler.mjs`.
 #
-# Last generated using `./wrangler.mjs` Fri, Nov 3, 2023, 12:34:36 AM EDT.
+# Last generated using `./wrangler.mjs` Tue, Nov 7, 2023, 8:33:03 PM EST.
 ##
 
 send_metrics = false
