--- a/.npmignore
+++ b/.npmignore
@@ -25,7 +25,7 @@
 # Generated data.
 # <generated:start>
 
-# Last generated Fri, Nov 3, 2023, 12:34:34 AM EDT.
+# Last generated Tue, Nov 7, 2023, 8:33:02 PM EST.
 
 # Locals
 
