--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,7 +7,7 @@
  * @note This entire file will be updated automatically.
  * @note Instead of editing here, please review `./settings.mjs`.
  *
- * Last generated using `./settings.mjs` Fri, Nov 3, 2023, 12:34:34 AM EDT.
+ * Last generated using `./settings.mjs` Tue, Nov 7, 2023, 8:33:02 PM EST.
  */
 {
     "editor.formatOnType": false,
@@ -134,7 +134,7 @@
         "tsconfig.*": true,
         "dev-types.d.ts": true,
         "config.gypi": true,
-        "dev/.files": true,
+        //"dev/.files": true,
         ".yarn": true,
         "vendor": true,
         "node_modules": true,
